# ChangeLog for app-misc/jail
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/jail/ChangeLog,v 1.26 2010/09/17 05:36:42 jer Exp $

*jail-1.9-r3 (17 Sep 2010)

  17 Sep 2010; Jeroen Roovers <jer@gentoo.org> jail-1.9-r2.ebuild,
  +jail-1.9-r3.ebuild, +files/jail-1.9-gentoo.patch,
  +files/jail-1.9-ldflags.patch, +files/jail-1.9-multiuser-rsa.patch,
  +files/jail-1.9-wrongshell.patch, -files/jail-gentoo.diff,
  -files/multiuser-rsa.patch, -files/wrongshell.patch:
  Clean up patches (including their names). Respect LDFLAGS (bug #335679).

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> jail-1.9-r2.ebuild:
  Remove virtual/libc

  30 Dec 2008; Christoph Mende <angelos@gentoo.org> jail-1.9-r2.ebuild:
  QA: Respect CC (bug 243652), respect CFLAGS (bug 240073)

  11 May 2008; Markus Meier <maekke@gentoo.org> -jail-1.9-r1.ebuild,
  jail-1.9-r2.ebuild:
  quotes, amd64 stable (bug #214798), remove old

  26 Mar 2008; Brent Baude <ranger@gentoo.org> jail-1.9-r2.ebuild:
  stable ppc, bug 214798

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> jail-1.9-r2.ebuild:
  x86 stable

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  09 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> jail-1.9-r2.ebuild:
  Stable on sparc

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> jail-1.9-r1.ebuild:
  stable on amd64

  17 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> jail-1.9-r2.ebuild:
  To ~sparc wrt #85273

  17 Oct 2004; David Holm <dholm@gentoo.org> jail-1.9-r2.ebuild:
  Added to ~ppc.

*jail-1.9-r2 (20 Sep 2004)

  20 Sep 2004; Daniel Black <dragonheart@gentoo.org>
  +files/multiuser-rsa.patch, +jail-1.9-r2.ebuild:
  multiuser.patch added as per bug #64718 thanks to Greg Payne
  <payne@uppercasedevelopment.com> and the patch author Cory Thomas

  10 Jul 2004; Tom Martin <slarti@gentoo.org> jail-1.9-r1.ebuild:
  Marked ~amd64.
