@@ -1,17 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST bottlerocket-0.04c.tar.gz 40533 RMD160 d1db2caa29faf599132e7c7f6036a7d170778718 SHA1 70f4877cea17653ae8e21d93c1a620c7ddeeeb69 SHA256 deb8fbf8856f87af15fa9883e07b1fddb2aa78f6b4c7d119ae4bd664dc1d19ae
-EBUILD bottlerocket-0.04c-r1.ebuild 1005 RMD160 b380c2a9eaf88cc4499ae997d3d29182761fca1c SHA1 fe567a4c79c5e56e84e3ffd9641f1b829cde3ee0 SHA256 614d23e6589cbd56ee40d1482544dd42ef1ac42dc0ce3a98cee98464666a0b81
+EBUILD bottlerocket-0.04c-r1.ebuild 1009 RMD160 f242f0b64fcb5bcf2f5da185a5815d868b447783 SHA1 ab68875ba4842b983ddfb32ff077ff8ab1e40e68 SHA256 9c4fd34a8c5e001c19ac1f7ceef7c8583baf00c137125c610acb6883cce18d02
 EBUILD bottlerocket-0.04c.ebuild 832 RMD160 827a0dc6c7b0b503fd6be43fa88fd87f2a17467b SHA1 009717836c1b880af1bf730bc4672568b2823aa6 SHA256 1714eb521baddffcf0a96f8e92e1381a6ecba0d3073057b80fd57183ab55f129
-MISC ChangeLog 1310 RMD160 9b6951bc747edbbd51dc92912557d8aa1ff25100 SHA1 3d1135fadd5cb0c513449ce603c4dc43c6a6bc34 SHA256 a4c4c82859cb01aafdea83ceff1dade2f6e2b961b7c6349df91c04d15e839171
+MISC ChangeLog 1435 RMD160 8e1f14b298facd3ef4afdf9ff840d53d595f26f6 SHA1 79cbbbbc7d16ec0062d25c3ef6c287b23d1c5cf6 SHA256 c340a6a996a646a9156738916ac2f399d036c7758a7ee264c07d505f9cfc915a
 MISC metadata.xml 210 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 SHA1 efa00493ddec7289a21bc4cbcc6e95ec4de749d5 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk58/40ACgkQfXuS5UK5QB245QP/etPIY2ZgMOAG39JzJdlFpFkL
-uo7dw13/kyP2mG2MZhbYc6DGurZmwI8sUVyoawV581igGaRWax525uzU6txD3mlv
-Wff1cgI/LnBW1SoVoMDM97yO6L+KG4kf7mlgKbWM+NYNobjf0BGWIYjGvnIfWWrN
-bddHyoK1MAtfOe2vFSY=
-=6ItM
+iQIcBAEBCgAGBQJO0CbKAAoJEPqDWhW0r/LCSMoQAIEvl9Rs3dzP313YKz/tM2yM
+NrcgYvuBv7OulZuhVMp1SEVtUpJ9aL1URFYgbxb9+ZX9bCxQQ+ukBXESWVzP+7/R
+RWeI9nPB6cgBL4uSa25QqB3pSRXvFzMa/dYairwWVlbsKihaeIfSjuRBpuqlHeug
+Salfj3Kdh2eqv+RpF4+/p5KsWupSz5tuvrGRRf4GgswlPVDpa/64r+sPEYwuq0cs
++hKxkamma1YlvLeBHX6RYjodTWtpVch1GgOpEoqh4rtA7ziXoQc6eGt86eDynuOB
+Tu1CIsuvrAOzWWI0ziuuDHPlbfYv0TgqdkOPnjNcw5JFZh0b1gideyi8k1LdiXV0
+ilVOsewb0V8jQNXtedzFSwhhaNhbWsPgsQO6EgmVEbDwS0h56GDMk8NfFvJCqUp4
+j2+mVsPRS3LUyAOpKsb+tiTkt4kvcZCSw8P7IJ/xnZFlxkK/HyXhS8sj65aIhgeA
+xIcxnnIOmIjts6JRbKUsnxCRj7W/Ed4yrqdCDoJp0+Bqz1LVOVa03cVeLknC1hZ9
+AsQrItcW45eft0YTohEyb5qeqBXJFJtcKQjzZprpnwiLrCzvars4dsBbsh8qZ5D/
+QUUD6nYWDMynDIKbRvjTXoOEK3uDeltWUXd1I59jlP7OtzwUuVJ4Hxrobsy+XQJ3
+3BU+tbmLmm7SXPmhwzg0
+=5jOZ
 -----END PGP SIGNATURE-----
