@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX jail-1.9-gentoo.patch 3186 RMD160 fc1474469012656830905a13c18a507c97179430 SHA1 b70281b33d3a095116cf60874cf96b3024a9fb64 SHA256 bf3c42da26870dca1295f1fc5ca1d49eb1073137d7518f88d54b427fdb30ca61
 AUX jail-1.9-ldflags.patch 328 RMD160 61541519c9c6023194ccfa581a59e326624f4164 SHA1 26630da7670267ac7590021d92918cc2ff9509d9 SHA256 26034a6e25281483ac3add1deb42c49bcfcde00693f958aaf0eda542ba98bd37
@@ -7,15 +7,23 @@ AUX jail-1.9-multiuser-rsa.patch 856 RMD160 a1d876261fc2ebbd1d9c666a3f3d97d8ddb1
 AUX jail-1.9-wrongshell.patch 330 RMD160 be9d95c6956cb665f94fb4d298f2e7cf14e38262 SHA1 ec0f0c14bfe2c4bb8c7c68a92229e068e45582ff SHA256 d9de983e7c31e09927a87ac56c028ffb4f2f9692825aba765a157a63908eb07f
 DIST jail_1.9.tar.gz 32994 RMD160 12a43f7c0aa533ff0ffa91a1b97bf7b59c89cb78 SHA1 c233f81281c00b681d79ab7150e099fe358447ea SHA256 1d997739b2dfe84ff975673b1357d3814cd3c2ee0cf3d61031f6f95a3e2080e3
 EBUILD jail-1.9-r2.ebuild 2304 RMD160 32e8c90e879b1d4e9bd0542ce9caf64bf6535c7b SHA1 ae9fe5abab47ce8460167d6610eae1ca6f90ea50 SHA256 e395e2cd6300ecaa6d0752bb3e50abde24ea5513952a502ff8d83f3189738786
-EBUILD jail-1.9-r3.ebuild 2220 RMD160 517d7e0328259731617b9888565f460568ef24a4 SHA1 57d73a9dae6956bc4737830c8e6db4a7f1898dd5 SHA256 6bf2a4b7c6d06f237d8015a8d3507ecbd09dd46d66872b4b61735bbcf1ac2e71
-MISC ChangeLog 3102 RMD160 b78a6770681ec41425a56609a2dcf3a67fdc95c9 SHA1 7bb86351d87a1889b69fbd930c29771d65a521f8 SHA256 8073a9a3c79a6c86bfe5d9049af86cc64b17b52ccfb1e1a5a7ea387534d5bce4
+EBUILD jail-1.9-r3.ebuild 2266 RMD160 a81ed28a50d27d82033c793be151ab2c1042a1f1 SHA1 4fce8ed34c077013174f5e504fdd4d538fa67561 SHA256 6f1f58b035c2e7296cc721fc9bcd37c65d7169e6a326142437dacb3c5e39f81b
+MISC ChangeLog 3243 RMD160 12e7670c1180d127718912d843a3fd5aefd269da SHA1 db2694524815a45ffd9b05e202b0dc2e4b3f096d SHA256 3494a4773a13f5fb4252501889103557e9bc78b7847be17d357395a3c7751b13
 MISC metadata.xml 732 RMD160 cffe3089483abc04882dc2418cb08d9c6874f0be SHA1 5276a0133f7939fd5daa98c0d1cbaae84fc6a3e4 SHA256 3c834970681eb57c098cdc64aea81fd309609090858ee8d123a3937af89112b5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk58/40ACgkQfXuS5UK5QB0JBwQArjpxDpT4973y4WVJYAreR0ge
-+i8L83pAyBmOFSR3gqPfPIqBgsWoFC4QhoLHnUtJzuv8Fi9J3T/VXKu9dZvov8is
-n5zOtfEI6nDJoL/LdQ7ChAY50ePu6FUSuhc5wqgBr4HTOL4zkLUClGDFQaN5amZV
-XFxKWOLUm6I1ajthq0M=
-=Zt5n
+iQIcBAEBCgAGBQJO0CW1AAoJEPqDWhW0r/LCqX8P/ifuc4iZYZ9aOVVarBdwF64w
+dteTBCSFkr7Yza06K0a7I3QTQHI+Ysps06vJ/jvIrnMQYR3DTHKn/AK4o8rrUxXd
+rL3tk3Nb/Qjp/1gY1rs/Hd2Nw+jOi7sVY4vRu55rjr5HR/NLXJXUKRAOwjCD20Pk
+mWDMw32+/I2CGKpOEtcA8zlzAaK6qFG02avZ2xvV/DS0tuqKi3BFfJ8kloka1efW
+GbzoFDflRIjAs+9ETKFSeEp0P28E6FP4lnCw9bWHY9zAtLS0KjYJrwuLfxez0P5v
+oVoaVzR2RCzL3GNl5QPmmXIoOqKrZtMe1XqlYYCg7TYoHApkUxaH8SnVQiu7CS/K
+QrxZ51sTuEVqBeM2lxW2vaWwbhVgSwIvBlnIUhhuFOWADb3oJSdhaTm0810vJPUF
+oQipmGpoRP8aBOY2OAnPYwhbYQDLU0CNFyrBWlFsHst4rU9TPU7QS4TEd3fyI139
+BJrpexu6XuLK5VPwX8LX8Wq14fEas+E8mrAo+8MTRTW9wBVWjZd+6AWiuPTy/jyq
+LibGe9hClHpoY4N/OZLsDfcRBXcAvnWPBtjlfW2TRZxacSGj9ep8zRDrT/jEkD8n
+WOkV5N1QjYpfZTdu+vUHXM7yJisL5Dz+yd4wQraxz0iPeARFYZCZbUMdR7QBvhpW
+S8X66d8A7ZXKyg6YZApi
+=VSNV
 -----END PGP SIGNATURE-----
