@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/jail
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/jail/ChangeLog,v 1.26 2010/09/17 05:36:42 jer Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/jail/ChangeLog,v 1.27 2011/11/25 23:33:09 hwoarang Exp $
+
+  25 Nov 2011; Markos Chandras <hwoarang@gentoo.org> jail-1.9-r3.ebuild:
+  Add missing die statements. Stable on amd64 wrt bug #391579
 
 *jail-1.9-r3 (17 Sep 2010)
 
